# iteris

./: .gitattributes  .gitignore  CONTEXT.md  HANDOFF.md  PLAN.md  README.md  SKILLS.md  TRANSCRIPT.md  patch_brisc_notebook.js  patch_camus_notebooks.js  pyproject.toml  requirements.txt  week1_camus_baseline.ipynb  week2_00_env_validation.ipynb
archive/: week2_00_env_validation.ipynb
configs/: brisc_dqn.yaml  brisc_drl_glioma.yaml  brisc_drl_meningioma.yaml  brisc_drl_pituitary.yaml  brisc_drl_tumor.yaml  brisc_lite.yaml  camus.yaml  camus_ddpg.yaml  camus_dqn.yaml  camus_drl_c1.yaml  camus_drl_c2.yaml  camus_drl_c3.yaml  camus_lite.yaml  camus_msa_ddpg.yaml  camus_msa_dueling.yaml  drive.yaml  ham10000.yaml  kvasir.yaml
docs/: CI_CD.md  CONTEXT.md  CONTEXT_PARADIGM1.md  EVALUATION_REPORT.md  EXPERIMENTS.md  PLAN.md  PLAN_PARADIGM1.md  SKILLS.md  TRANSCRIPT.md  UI_PLAN.md
iteris/: __init__.py  agents.py  bc_demo.py  buffer.py  classifier.py  config.py  contour_utils.py  contour_viz.py  diagnostics.py  drl_networks.py  drl_training.py  env.py  env_contour.py  env_contour_refine.py  evaluation.py  geometry.py  ingestion.py  losses.py  metrics.py  models.py  msa.py  refine_config.py  refinement_viz.py  splits.py  training.py  transforms.py  utils.py  visualization.py  warm_start.py
iteris_ui/: .env.example  .eslintrc.cjs  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.d.ts  vite.config.js  vite.config.ts
notebooks/: 01_camus_baseline.ipynb  (+20 more)
(+175 files in other folders)
