[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "iteris"
version = "0.1.0"
description = "DRL contour refinement for medical image segmentation (CAMUS, BRISC)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Mohammad Anfaal Hossain" }]
keywords = [
    "deep-reinforcement-learning",
    "medical-image-segmentation",
    "contour-refinement",
    "echocardiography",
    "brain-tumour-mri",
]

# Runtime deps are pinned in requirements.txt (numpy<2.0 is critical for Kaggle);
# kept there rather than duplicated here so the Kaggle install path stays the
# single source of truth. `pip install -e .` makes `iteris` importable without
# the sys.path.insert dance the notebooks use on Kaggle.
dependencies = []

[project.urls]
Repository = "https://github.com/Anfaal26/iteris"

[tool.setuptools]
packages = ["iteris"]

[tool.setuptools.package-data]
iteris = ["py.typed"]
